--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^7.7.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
